# OpenGL-DrawingOBJ

./: .gitignore  CMakeLists.txt  Face.hpp  Group.cpp  Group.h  Includes.h  README.md  Rectangle.cpp  Rectangle.hpp  main-orig.cpp  main.cpp  math_funcs.cpp  math_funcs.h
resources/: cenaPaintball.mtl  mesa01.mtl
src/: Face.cpp  Face.hpp  Group.h  Includes.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Utils.cpp  Utils.h  main.cpp  math_funcs.cpp  math_funcs.h
src/shaders/: FragmentShader.glsl  VertexShader.glsl
